--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,11 +1,5 @@
-// Variables
+// Custom Variables
 //
-// Copy settings from this file into the provided `_custom.scss` to override
-// the Bootstrap defaults without modifying key, versioned files.
-//
-// Variables should follow the `$component-state-property-size` formula for
-// consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
-
 // Table of Contents
 //
 // Color system
