--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -66,6 +66,11 @@ $grays: (
   900: $gray-900
 ) !default;
 
+//
+// Project colors
+//
+$p-gold: #a3864b;
+
 $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
@@ -94,14 +99,16 @@ $colors: (
 ) !default;
 
 $theme-colors: (
-  primary: $blue,
-  secondary: $gray-600,
+  //primary: $blue,
+  primary: $p-gold,
+  secondary: $gray-900,
   success: $green,
   info: $cyan,
   warning: $yellow,
   danger: $red,
   light: $gray-100,
-  dark: $gray-800
+  dark: $gray-800,
+  gold: $p-gold
 ) !default;
 
 // Set a specific jump point for requesting color jumps
@@ -186,7 +193,9 @@ $container-max-widths: (
   sm: 540px,
   md: 720px,
   lg: 960px,
-  xl: 1140px
+  xl: 1250px
+  // xl: 1140px
+  // xl: 1008px
 ) !default;
 @include _assert-ascending($container-max-widths, "$container-max-widths");
 
@@ -225,7 +234,8 @@ $transition-collapse:    height .35s ease !default;
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+//$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$font-family-sans-serif: "ltc-goudy-oldstyle-pro", serif;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:       $font-family-sans-serif !default;
 
