--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,39 +14,39 @@ Use it to make something cool, have fun, and share what you've learned with othe
 */
 
 @import "bootstrap/functions";
-@import "bootstrap/variables";
+// @import "bootstrap/variables";
 @import "custom";
 @import "bootstrap/mixins";
 @import "bootstrap/print";
 @import "bootstrap/reboot";
 @import "bootstrap/type";
 @import "bootstrap/images";
-@import "bootstrap/code";
+// @import "bootstrap/code";
 @import "bootstrap/grid";
-@import "bootstrap/tables";
+// @import "bootstrap/tables";
 @import "bootstrap/forms";
 @import "bootstrap/buttons";
 @import "bootstrap/transitions";
-@import "bootstrap/dropdown";
-@import "bootstrap/button-group";
+// @import "bootstrap/dropdown";
+// @import "bootstrap/button-group";
 @import "bootstrap/input-group";
 @import "bootstrap/custom-forms";
 @import "bootstrap/nav";
 @import "bootstrap/navbar";
-@import "bootstrap/card";
-@import "bootstrap/breadcrumb";
-@import "bootstrap/pagination";
-@import "bootstrap/badge";
-@import "bootstrap/jumbotron";
-@import "bootstrap/alert";
-@import "bootstrap/progress";
+// @import "bootstrap/card";
+// @import "bootstrap/breadcrumb";
+// @import "bootstrap/pagination";
+// @import "bootstrap/badge";
+// @import "bootstrap/jumbotron";
+// @import "bootstrap/alert";
+// @import "bootstrap/progress";
 @import "bootstrap/media";
 @import "bootstrap/list-group";
 @import "bootstrap/close";
-@import "bootstrap/modal";
-@import "bootstrap/tooltip";
-@import "bootstrap/popover";
-@import "bootstrap/carousel";
+// @import "bootstrap/modal";
+// @import "bootstrap/tooltip";
+// @import "bootstrap/popover";
+// @import "bootstrap/carousel";
 @import "bootstrap/utilities";
 
 // WordPress Core
