home about contact added to top-most row; email address fixed

--- a/scss/theme/_header.scss
+++ b/scss/theme/_header.scss
@@ -19,6 +19,7 @@
 .top-bar-icons {
     margin-top: .8em;
     text-align: center;
+    padding: 0;
     
     @include media-breakpoint-up(md) {
         text-align: right;
@@ -33,4 +34,35 @@
     &:hover {
         text-decoration: none;
     }
+}
+
+.top-bar-nav {
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width: 768px) {
+    .top-bar-nav {
+        justify-content: center;
+    }
+}
+
+@media (min-width: 768px) {
+    .top-bar-nav {
+        justify-content: flex-end;
+    }
+}
+
+.top-bar-nav a {
+    font-size: 1.4rem;
+    color: #fff;
+}
+
+.top-bar-nav a:nth-child(n+2) {
+    margin-left: 20px;
+    border-left: 1px solid #fff;
+}
+
+.space-ace {
+    margin-left: 13px;
 }
