--- a/scss/_bootstrap-custom.scss
+++ b/scss/_bootstrap-custom.scss
@@ -1,3 +1,6 @@
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+
 @import "theme/variables";
 
 // https://getbootstrap.com/docs/4.0/getting-started/theming/
