--- a/sass/woocommerce/_widgets.scss
+++ b/sass/woocommerce/_widgets.scss
@@ -27,7 +27,7 @@
 		height: 1em;
 		cursor: ew-resize;
 		outline: none;
-		background: $color__link;
+		background: royalblue;
 		box-sizing: border-box;
 		margin-top: -.25em;
 		opacity: 1;
@@ -47,7 +47,7 @@
 		z-index: 1;
 		display: block;
 		border: 0;
-		background: $color__link;
+		background: royalblue;
 	}
 
 	.price_slider_wrapper .ui-widget-content {
