add bootstrap nav and extra markup

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,5 +11,11 @@
 @import "components/comments";
 @import "components/sidebar";
 
+// Layout
+@import "layout/header";
+@import "layout/main";
+@import "layout/footer";
+@import "layout/sidebar";
+
 // Pages
 @import "pages/blog";
