--- a/src/scss/wordpress/_wordpress.scss
+++ b/src/scss/wordpress/_wordpress.scss
@@ -20,6 +20,10 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 @import "variables";
 @import "mixins";
 
+/**
+ * Accessibility
+ */
+@import "accessibility";
 
 /**
  * Alignments
