--- a/style.css
+++ b/style.css
@@ -238,6 +238,17 @@ object {
   display: block;
 }
 
+/* Images */
+
+figure,
+img {
+  display: block;
+  height: auto;
+  /* Make sure images are scaled correctly. */
+  max-width: 100%;
+  /* Adhere to container width. */
+}
+
 /*!
  * Bootstrap v4.1.1 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
