--- a/src/scss/wordpress/_media.scss
+++ b/src/scss/wordpress/_media.scss
@@ -63,3 +63,11 @@ object {
 .gallery-caption {
 	display: block;
 }
+
+/* Images */
+figure,
+img {
+display: block;
+height: auto; /* Make sure images are scaled correctly. */
+max-width: 100%; /* Adhere to container width. */
+}
